--- a/BighornVisitationAnalysisSummer2019.Rmd
+++ b/BighornVisitationAnalysisSummer2019.Rmd
@@ -290,33 +290,36 @@ allcut <- rbind(Marbcutobs, BrsScutobs, cmprcutobs, nopacutobs)
 
 I checked to make sure that every sheep that I thought was alive for the summer actually had documented proof of life for the entire summer. When counting the number of sheep in my sample, I made sure not to include sheep that are assumed dead (Marbles: BHS_1413 (dead harvest), BHS_1496, BHS_1597, South Bristols: BHS_1340, BHS_1331, BHS_1598). I also made sure to include sheep that were not seen at water all summer, but are documented to be alive (Marbles BHS_1497, Nopah BHS_1737). All of the South Bristols, and all of the CMPR sheep that I limited this analysis to (for reasons listed below), came into water at least once during the summer.
 
+Some notes on the whereabouts of the sheep that were not see at water as per their GPS collars. Marb BHS_1589 literally just chilled on Castle Peak. BHS_1497's collar is no longer working. Nopah BHS_1737 was between the Nopah and El Si Guzzler - looks like stayed as high elevation? I specifically examined BHS_1595, which only had 3 visitations prior to its death on 8/5. BHS_1595 was in the southern Marbles, then moved up to just south of Castle Peak. There is a chance that there is an unknown water source in this location.
 
-Some notes on the whereabouts of these sheep as per their GPS collars. Marb BHS_1589 literally just chilled on Castle Peak. BHS_1413 also no longer working (Vectronics website is down). BHS_1497 and BHS_1597's collars are no longer working. South Bristols BHS_1340 and BHS_1331 no longer had working GPS collars (is this true for BHS_1598 too? Vectronics website is currently down). Nopah BHS_1737 was between the Nopah and El Si Guzzler - looks like stayed as high elevation? 
-# Took out 1413 b/c dead, 1589 and 1597 because assumed dead
-1589 - Febuary 28th
-1413 - not in last seen table
-1496 - last seen 2018 
-1497 - last seen in November 2019
-1597 - 
-1340 - last seen in November 2019
-1331 - 
-1598 - 
+It is worth noting that a couple Marbles sheep died during the summer. BHS_ 1367 was heard dead on flight on 8/19 and last seen 6/12 at Theresa. Given this information, I am making the conservative assumption in analyses that it died 6/12 and only including it through 6/11 in analyses. BHS_1595 died on either 8/5 or 8/6, but stopped moving on the 5th. Therefore, I am only including it in analyses through 8/4.
 
-NEED TO FIGURE OUT THE STATUS OF 1496!!!
+After looking at the GPS data for the summer, I realized that sheep at Paiute Guzzler were making their way down to a water source in the south of the Castle Piutes that I did not put a camera on. As such, I limited my analysis to the sheep that were only located in the far north section of the range, by Viceroy Mine.
 
-I fixed some observations that were incorrect.
-
-
+I fixed some observations that were incorrect, and added some observations that were supposed to be in the Marbles but were in the South Bristols to the Marbles.
 
 ```{r}
+## Individually Identifiable Bighorn in Visitation Preliminary Analyses
+
+# Marbles: BHS_1367, BHS_1365, BHS_1361, BHS_1362", BHS_1357, BHS_1416, BHS_1421, BHS_1581, BHS_1577, BHS_1574, BHS_1576, BHS_1583, BHS_1584, BHS_1585, BHS_1587, BHS_1582, BHS_1575, BHS_1592, BHS_1594, BHS_1420, BHS_1493, BHS_1494, BHS_1590, BHS_1591, BHS_1682, BHS_1683, BHS_1684, BHS_1366, BHS_1497, BHS_1588, BHS_1595, BHS_1589"
+# *** This currently includes 1497 (never visited, Lily said seen alive last November) and 1592 (gps track and visited twice), but not 1496 (assumed dead).
+
+# South Bristols: BHS_1330, BHS_1337, BHS_1334, BHS_1329, BHS_1328, BHS_1333, BHS_1425, BHS_1426, BHS_1489, BHS_1491, BHS_1578, BHS_1579, BHS_1580, BHS_1596, BHS_1599, BHS_1687, BHS_1486, BHS_1490, BHS_1492, BHS_1428, BHS_1685, BHS_1686, BHS_1688, BHS_1689
+
+# Nopah: BHS_1737, BHS_1740, BHS_1741, BHS_1738, BHS_1736, BHS_1739
+
+# Castle Piutes: BHS_1730, BHS_1733, BHS_1734, BHS_1728
+
+# *** DG note to self: 1728 doesn't have a working GPS collar
+
+## Fixing observations
+
 # One observation accidentally 1578 instead of 1576
 Marbcutobs$KI_Known_ID[Marbcutobs$DateObsTimeIDwaterspecific == "20190804BHS_15787:24VernNA"] <- "BHS_1576"
 # A different observation 1685 instead of 1590
 Marbcutobs$KI_Known_ID[Marbcutobs$DateObsTimeIDwaterspecific == "20190722BHS_168511:23TherBoss Tank"] <- "BHS_1590"
 # Another observation changing 1713 for 1582
 Marbcutobs$KI_Known_ID[Marbcutobs$DateObsTimeIDwaterspecific == "20190803BHS_17139:37TherBoss Tank"] <- "BHS_1582"
-
-
 ```
 
 
@@ -335,14 +338,14 @@ Afterwards, I realized that the plots that I made here are not nearly as useful 
 marballsheepvisitsday <- as.data.frame(table(Marbcutobs$KI_Known_ID, Marbcutobs$GO_Date))
 # View(marballsheepvisitsday)
 # Took out 1413 b/c dead, 1589 and 1597 because assumed dead 
-marballsheepvisitsday1 <- marballsheepvisitsday[(marballsheepvisitsday$Var1 == "BHS_1367") |  (marballsheepvisitsday$Var1 == "BHS_1365") | (marballsheepvisitsday$Var1 == "BHS_1361") |(marballsheepvisitsday$Var1 == "BHS_1362") | (marballsheepvisitsday$Var1 == "BHS_1357") | (marballsheepvisitsday$Var1 == "BHS_1416") | (marballsheepvisitsday$Var1 == "BHS_1421") | (marballsheepvisitsday$Var1 == "BHS_1581") | (marballsheepvisitsday$Var1 == "BHS_1577") | (marballsheepvisitsday$Var1 == "BHS_1574") | (marballsheepvisitsday$Var1 == "BHS_1576") | (marballsheepvisitsday$Var1 == "BHS_1583") | (marballsheepvisitsday$Var1 == "BHS_1584") | (marballsheepvisitsday$Var1 == "BHS_1585") | (marballsheepvisitsday$Var1 == "BHS_1587") | (marballsheepvisitsday$Var1 == "BHS_1582") | (marballsheepvisitsday$Var1 == "BHS_1575") | (marballsheepvisitsday$Var1 == "BHS_1592") | (marballsheepvisitsday$Var1 == "BHS_1594") | (marballsheepvisitsday$Var1 == "BHS_1420") | (marballsheepvisitsday$Var1 == "BHS_1493") | (marballsheepvisitsday$Var1 == "BHS_1494") | (marballsheepvisitsday$Var1 == "BHS_1590") | (marballsheepvisitsday$Var1 == "BHS_1591") | (marballsheepvisitsday$Var1 == "BHS_1682") | (marballsheepvisitsday$Var1 == "BHS_1683") | (marballsheepvisitsday$Var1 == "BHS_1684") | (marballsheepvisitsday$Var1 == "BHS_1366") | (marballsheepvisitsday$Var1 == "BHS_1497") | (marballsheepvisitsday$Var1 == "BHS_1588") | (marballsheepvisitsday$Var1 == "BHS_1595"), ]
+marballsheepvisitsday1 <- marballsheepvisitsday[(marballsheepvisitsday$Var1 == "BHS_1367") |  (marballsheepvisitsday$Var1 == "BHS_1365") | (marballsheepvisitsday$Var1 == "BHS_1361") |(marballsheepvisitsday$Var1 == "BHS_1362") | (marballsheepvisitsday$Var1 == "BHS_1357") | (marballsheepvisitsday$Var1 == "BHS_1416") | (marballsheepvisitsday$Var1 == "BHS_1421") | (marballsheepvisitsday$Var1 == "BHS_1581") | (marballsheepvisitsday$Var1 == "BHS_1577") | (marballsheepvisitsday$Var1 == "BHS_1574") | (marballsheepvisitsday$Var1 == "BHS_1576") | (marballsheepvisitsday$Var1 == "BHS_1583") | (marballsheepvisitsday$Var1 == "BHS_1584") | (marballsheepvisitsday$Var1 == "BHS_1585") | (marballsheepvisitsday$Var1 == "BHS_1587") | (marballsheepvisitsday$Var1 == "BHS_1582") | (marballsheepvisitsday$Var1 == "BHS_1575") | (marballsheepvisitsday$Var1 == "BHS_1592") | (marballsheepvisitsday$Var1 == "BHS_1594") | (marballsheepvisitsday$Var1 == "BHS_1420") | (marballsheepvisitsday$Var1 == "BHS_1493") | (marballsheepvisitsday$Var1 == "BHS_1494") | (marballsheepvisitsday$Var1 == "BHS_1590") | (marballsheepvisitsday$Var1 == "BHS_1591") | (marballsheepvisitsday$Var1 == "BHS_1682") | (marballsheepvisitsday$Var1 == "BHS_1683") | (marballsheepvisitsday$Var1 == "BHS_1684") | (marballsheepvisitsday$Var1 == "BHS_1366") | (marballsheepvisitsday$Var1 == "BHS_1497") | (marballsheepvisitsday$Var1 == "BHS_1588") | (marballsheepvisitsday$Var1 == "BHS_1595") | (marballsheepvisitsday$Var1 == "BHS_1589"), ]
 
 marballsheepvisitsday1$Freq[marballsheepvisitsday1$Freq == 2] <- 1
 marballsheepvisitsday1$Freq[marballsheepvisitsday1$Freq == 3] <- 1
 marballsheepvisitsday1$Freq[marballsheepvisitsday1$Freq == 4] <- 1
 marballsheepvisitsday1$Freq[marballsheepvisitsday1$Freq == 5] <- 1
 marbindsheepvisitperday <- as.data.frame(tapply(marballsheepvisitsday1$Freq, list(marballsheepvisitsday1$Var2), sum))
-View(marbindsheepvisitperday)
+# View(marbindsheepvisitperday)
 marbindsheepvisitperday <- cbind(rownames(marbindsheepvisitperday), data.frame(marbindsheepvisitperday, row.names = NULL))
 marbindsheepvisitperday$datenum <- as.character(marbindsheepvisitperday$`rownames(marbindsheepvisitperday)`)
 marbindsheepvisitperday$datenum <- as.Date(marbindsheepvisitperday$`rownames(marbindsheepvisitperday)`, format = "%Y-%m-%d")
@@ -372,16 +375,16 @@ marbindsheepvisitperday1$`rownames(marbindsheepvisitperday)` <- as.Date(marbinds
 # GGPLOT WORKS!
 library(ggplot2)
 plotmarbnumsheep <- ggplot(data = marbindsheepvisitperday1, aes(x = `rownames(marbindsheepvisitperday)`, y = visits, fill = "supp")) +
-  geom_bar(stat="identity", color = "black") + scale_x_date(limits = as.Date(c("2019-05-17", "2019-08-15"))) + ggtitle("Marbles") + xlab("Date") + ylab("Number of Individual Sheep") + theme(legend.position = "none") + ylim(0, 35) + geom_hline(yintercept = 31)
+  geom_bar(stat="identity", color = "black") + scale_x_date(limits = as.Date(c("2019-05-17", "2019-08-15"))) + ggtitle("Marbles") + xlab("Date") + ylab("Number of Individual Sheep") + theme(legend.position = "none") + ylim(0, 35) + geom_hline(yintercept = 32)
 print(plotmarbnumsheep)
 
-## MARBLES NEED TO KNOW WHEN SHEEP DIED AND ADD IN LINE!!!
+## DG note to self: MARBLES NEED TO KNOW WHEN SHEEP DIED AND ADD IN LINE!!!
 
 
 
 # SOUTH BRISTOLS
 
-#### NEED TO CHECK AND POTENTIALLY FIX ALso BHS_1591 Teresa Seep 7/19 21:59 and 7/20 2:43 - probably need to change to Marb.
+#### NEED TO CHECK AND POTENTIALLY FIX ALso BHS_1591 Teresa Seep 7/19 21:59 and 7/20 2:43 - probably need to change to Marb. -- I did change to Marbles but I'm not sure if still showing up in South Bristols data?
 
 BrsScutobs$KI_Known_ID <- as.character(BrsScutobs$KI_Known_ID)
 BrsScutobs$KI_Known_ID[BrsScutobs$DateObsTimeIDwaterspecific == "20190623BHS_149910:04TalcNA"] <- "BHS_1599"
@@ -392,6 +395,10 @@ BrsScutobs$GO_RangeCode[BrsScutobs$DateObsTimeIDwaterspecific == "20190719BHS_15
 BrsScutobs$GO_RangeCode[BrsScutobs$DateObsTimeIDwaterspecific == "20190720BHS_15912:43TherSeep"] <- "Marb"
 BrsScutobs$GO_RangeCode <- as.factor(BrsScutobs$GO_RangeCode)
 # Still shows up when type in View(BrsScutobs[BrsScutobs$KI_Known_ID == "BHS_1591", ]) though now says Marb -- DID I FIX IT?
+
+# This might be good. Need to check that it is in the right place in the code.
+# brstomarb <- BrsScutobs[BrsScutobs$KI_Known_ID == "BHS_1591",]
+# Marbcutobs <- rbind(Marbcutobs, brstomarb)
 
 sbrssheepvisitsday <- as.data.frame(table(BrsScutobs$KI_Known_ID, BrsScutobs$GO_Date))
 sbrssheepvisitsday1 <- sbrssheepvisitsday[(sbrssheepvisitsday$Var1 == "BHS_1330") | (sbrssheepvisitsday$Var1 == "BHS_1337") | (sbrssheepvisitsday$Var1 == "BHS_1334") | (sbrssheepvisitsday$Var1 == "BHS_1329") | (sbrssheepvisitsday$Var1 == "BHS_1328") | (sbrssheepvisitsday$Var1 == "BHS_1333") | (sbrssheepvisitsday$Var1 == "BHS_1425") | (sbrssheepvisitsday$Var1 == "BHS_1426") | (sbrssheepvisitsday$Var1 == "BHS_1489") | (sbrssheepvisitsday$Var1 == "BHS_1491") | (sbrssheepvisitsday$Var1 == "BHS_1578") | (sbrssheepvisitsday$Var1 == "BHS_1579") | (sbrssheepvisitsday$Var1 == "BHS_1580") | (sbrssheepvisitsday$Var1 == "BHS_1596") | (sbrssheepvisitsday$Var1 == "BHS_1599") | (sbrssheepvisitsday$Var1 == "BHS_1687") | (sbrssheepvisitsday$Var1 == "BHS_1486") | (sbrssheepvisitsday$Var1 == "BHS_1490") | (sbrssheepvisitsday$Var1 == "BHS_1492") | (sbrssheepvisitsday$Var1 == "BHS_1428") | (sbrssheepvisitsday$Var1 == "BHS_1685") | (sbrssheepvisitsday$Var1 == "BHS_1686") | (sbrssheepvisitsday$Var1 == "BHS_1688") | (sbrssheepvisitsday$Var1 == "BHS_1689"),]
@@ -439,7 +446,6 @@ plotnopasheepnum <- ggplot(data = nopaindsheepvisitperday2, aes(x = Date, y = Nu
 
 cmprallsheepvisitsday <- as.data.frame(table(cmprcutobs$KI_Known_ID, cmprcutobs$GO_Date))
 # Also due to the lack of coverage in the Castle Piutes along the southern stream, I limited the analysis to bighorn that located in the mine area (1730, 1733, 1734, 1728 - which doesn't have a working GPS collar).
-### IS THIS THE RIGHT THING TO DO???
 cmprallsheepvisitsday1 <- cmprallsheepvisitsday[(cmprallsheepvisitsday$Var1 == "BHS_1730") | (cmprallsheepvisitsday$Var1 == "BHS_1733") | (cmprallsheepvisitsday$Var1 == "BHS_1734") | (cmprallsheepvisitsday$Var1 == "BHS_1728"), ]
 # CMPR only has up to 2 visits in a day, so only need to change 2 to 1.
 cmprallsheepvisitsday1$Freq[cmprallsheepvisitsday1$Freq == 2] <- 1
@@ -465,21 +471,19 @@ I then made figures of the percent of individual sheep coming into water by day.
 ```{r}
 
 # MARBLES
-# 31 does not include 1496.
 # Had to change the total number because sheep died.
-# 1367: heard dead on flight on 8/19, last seen 6/12 at Theresa - therefore assume must assume died 6/12, 
-# 1595: Died 8/5 or 6th, stopped moving on the 5th, last day to include is the 4th
 
 marbindsheepvisitperday1$TotalNumSheep <- NA
 marbindsheepvisitperday1$TotalNumSheep <- as.character(marbindsheepvisitperday1$TotalNumSheep)
-marbindsheepvisitperday1$TotalNumSheep[(marbindsheepvisitperday1$`rownames(marbindsheepvisitperday)` <= as.Date("2019-06-12"))] <- 31
-marbindsheepvisitperday1$TotalNumSheep[(marbindsheepvisitperday1$`rownames(marbindsheepvisitperday)` >= as.Date("2019-06-13")) & (marbindsheepvisitperday1$`rownames(marbindsheepvisitperday)` <= as.Date("2019-08-04"))] <- 30
-marbindsheepvisitperday1$TotalNumSheep[(marbindsheepvisitperday1$`rownames(marbindsheepvisitperday)` >= as.Date("2019-08-05"))] <- 29
+marbindsheepvisitperday1$TotalNumSheep[(marbindsheepvisitperday1$`rownames(marbindsheepvisitperday)` <= as.Date("2019-06-12"))] <- 32
+marbindsheepvisitperday1$TotalNumSheep[(marbindsheepvisitperday1$`rownames(marbindsheepvisitperday)` >= as.Date("2019-06-13")) & (marbindsheepvisitperday1$`rownames(marbindsheepvisitperday)` <= as.Date("2019-08-04"))] <- 31
+marbindsheepvisitperday1$TotalNumSheep[(marbindsheepvisitperday1$`rownames(marbindsheepvisitperday)` >= as.Date("2019-08-05"))] <- 30
+marbindsheepvisitperday1$TotalNumSheep <- as.numeric(marbindsheepvisitperday1$TotalNumSheep)
 
 marbindsheepvisitperday1$Percentvisited <- (marbindsheepvisitperday1$visits / marbindsheepvisitperday1$TotalNumSheep)
 library(ggplot2)
-plotmarbpercentsheep <- ggplot(data = marbindsheepvisitperday1, aes(x = `rownames(marbindsheepvisitperday)`, y = Percentvisited, fill = "supp")) + geom_bar(stat = "identity", color = "black") + scale_x_date(limits = as.Date(c("2019-05-17", "2019-08-15"))) + ggtitle("Marbles (n = 31*)") + xlab("Date") + ylab("Percent of Sheep") + theme(legend.position = "none") + ylim(0, 1)
-plotmarbpercentsheep1 <- plotmarbpercentsheep %+% scale_y_continuous((name = "Percent of Collared Sheep"), sec.axis = sec_axis(~. * 31, name = "Number of Collared Sheep"))
+plotmarbpercentsheep <- ggplot(data = marbindsheepvisitperday1, aes(x = `rownames(marbindsheepvisitperday)`, y = Percentvisited, fill = "supp")) + geom_bar(stat = "identity", color = "black") + scale_x_date(limits = as.Date(c("2019-05-17", "2019-08-15"))) + ggtitle("Marbles (n = 32*)") + xlab("Date") + ylab("Percent of Sheep") + theme(legend.position = "none") + ylim(0, 1)
+plotmarbpercentsheep1 <- plotmarbpercentsheep %+% scale_y_continuous((name = "Percent of Collared Sheep"), sec.axis = sec_axis(~. * 32, name = "Number of Collared Sheep"))
 print(plotmarbpercentsheep1)
 
 # SOUTH BRISTOLS
@@ -523,7 +527,7 @@ Marbcutobsrd <- Marbcutobs[(Marbcutobs$GO_Date != "2019-06-12") & (Marbcutobs$GO
 
 marballrd <- as.data.frame(table(Marbcutobsrd$KI_Known_ID, Marbcutobsrd$GO_Date))
 
-marballrd1 <- marballrd[(marballrd$Var1 == "BHS_1367") |  (marballrd$Var1 == "BHS_1365") | (marballrd$Var1 == "BHS_1361") | (marballrd$Var1 == "BHS_1362") | (marballrd$Var1 == "BHS_1357") | (marballrd$Var1 == "BHS_1416") | (marballrd$Var1 == "BHS_1421") | (marballrd$Var1 == "BHS_1581") | (marballrd$Var1 == "BHS_1577") | (marballrd$Var1 == "BHS_1574") | (marballrd$Var1 == "BHS_1576") | (marballrd$Var1 == "BHS_1583") | (marballrd$Var1 == "BHS_1584") | (marballrd$Var1 == "BHS_1585") | (marballrd$Var1 == "BHS_1587") | (marballrd$Var1 == "BHS_1582") | (marballrd$Var1 == "BHS_1575") | (marballrd$Var1 == "BHS_1592") | (marballrd$Var1 == "BHS_1594") | (marballrd$Var1 == "BHS_1420") | (marballrd$Var1 == "BHS_1493") | (marballrd$Var1 == "BHS_1494") | (marballrd$Var1 == "BHS_1590") | (marballrd$Var1 == "BHS_1591") | (marballrd$Var1 == "BHS_1682") | (marballrd$Var1 == "BHS_1683") | (marballrd$Var1 == "BHS_1684") | (marballrd$Var1 == "BHS_1366") | (marballrd$Var1 == "BHS_1497") | (marballrd$Var1 == "BHS_1588") | (marballrd$Var1 == "BHS_1595"), ]
+marballrd1 <- marballrd[(marballrd$Var1 == "BHS_1367") |  (marballrd$Var1 == "BHS_1365") | (marballrd$Var1 == "BHS_1361") | (marballrd$Var1 == "BHS_1362") | (marballrd$Var1 == "BHS_1357") | (marballrd$Var1 == "BHS_1416") | (marballrd$Var1 == "BHS_1421") | (marballrd$Var1 == "BHS_1581") | (marballrd$Var1 == "BHS_1577") | (marballrd$Var1 == "BHS_1574") | (marballrd$Var1 == "BHS_1576") | (marballrd$Var1 == "BHS_1583") | (marballrd$Var1 == "BHS_1584") | (marballrd$Var1 == "BHS_1585") | (marballrd$Var1 == "BHS_1587") | (marballrd$Var1 == "BHS_1582") | (marballrd$Var1 == "BHS_1575") | (marballrd$Var1 == "BHS_1592") | (marballrd$Var1 == "BHS_1594") | (marballrd$Var1 == "BHS_1420") | (marballrd$Var1 == "BHS_1493") | (marballrd$Var1 == "BHS_1494") | (marballrd$Var1 == "BHS_1590") | (marballrd$Var1 == "BHS_1591") | (marballrd$Var1 == "BHS_1682") | (marballrd$Var1 == "BHS_1683") | (marballrd$Var1 == "BHS_1684") | (marballrd$Var1 == "BHS_1366") | (marballrd$Var1 == "BHS_1497") | (marballrd$Var1 == "BHS_1588") | (marballrd$Var1 == "BHS_1595") | (marballrd$Var1 == "BHS_1589"), ]
 # Adding in sheep that never visited water all summer
 Marbinsert1497 <- read.csv("Marbinsert1497.csv", header = TRUE, sep = ",")
 marballrd1 <- rbind(marballrd1, Marbinsert1497)
@@ -547,7 +551,7 @@ marbindrd11$visits <- as.numeric(marbindrd11$visits)
 marbindrd11$sd <- as.numeric(marbindrd11$sd)
 marbindrd11$`rownames(marbindrd)` <- as.Date(marbindrd11$`rownames(marbindrd)` , "%Y-%m-%d")
 library(ggplot2)
-p <- ggplot(data = marbindrd11, aes(x = `rownames(marbindrd)`, y = visits)) + geom_point() + geom_errorbar(aes(ymin = visits - sd, ymax = visits + sd), width = .2) + labs(title = "Marbles (n = 31*)", x = "Date", y = "Mean Number of Visits by Day") + ylim(0, 2.5) + scale_x_date(limits = as.Date(c("2019-05-17", "2019-08-15"))) + theme_grey(base_size = 10)
+p <- ggplot(data = marbindrd11, aes(x = `rownames(marbindrd)`, y = visits)) + geom_point() + geom_errorbar(aes(ymin = visits - sd, ymax = visits + sd), width = .2) + labs(title = "Marbles (n = 32*)", x = "Date", y = "Mean Number of Visits by Day") + ylim(0, 2.5) + scale_x_date(limits = as.Date(c("2019-05-17", "2019-08-15"))) + theme_grey(base_size = 10)
 # print(p)
 
 # An Attempt to make it boxplots ggplot(data = marbindrd11, aes(x = `rownames(marbindrd)`, y = visits)) + geom_boxplot((aes(group = cut_width(`rownames(marbindrd)`, 1))
